--- a/backend/config.env.example
+++ b/backend/config.env.example
@@ -1,12 +1,20 @@
+# Supabase Configuration
+SUPABASE_URL=your_supabase_url
+SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# PagBank Configuration
+PAGBANK_API_URL=https://api.pagbank.com.br
+PAGBANK_CLIENT_ID=your_pagbank_client_id
+PAGBANK_CLIENT_SECRET=your_pagbank_client_secret
+PAGBANK_ACCESS_TOKEN=your_pagbank_access_token
+
+# Application URLs
+BASE_URL=http://localhost:5000
+FRONTEND_URL=http://localhost:5173
+
+# Server Configuration
 PORT=5000
 NODE_ENV=development
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=7d
 
-# Supabase Configuration
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
-
-# Frontend URL for password reset
-FRONTEND_URL=http://localhost:3000 
+# JWT Secret
+JWT_SECRET=your_jwt_secret_key 
