--- a/frontend/config.env.example
+++ b/frontend/config.env.example
@@ -1,3 +1,15 @@
-# Supabase Configuration
-VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key 
+# Frontend Environment Variables
+
+# API Configuration
+VITE_API_URL=http://localhost:5000
+
+# PagBank Configuration (if needed on frontend)
+VITE_PAGBANK_ENVIRONMENT=sandbox
+
+# Application URLs
+VITE_FRONTEND_URL=http://localhost:5173
+VITE_SUCCESS_URL=http://localhost:5173/payment/success
+
+# Feature Flags
+VITE_ENABLE_PAGBANK=true
+VITE_ENABLE_ANALYTICS=false 
